[package]
name = "kaitai-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
pest = "2.7.10"
pest_derive = "2.7.10"
regex = "1.10.2"
serde = "1.0.193"
serde_json = "1.0.117"
serde_yaml = "0.9.29"
